--- a/telematicsWebsite/static/css/sidebar.css
+++ b/telematicsWebsite/static/css/sidebar.css
@@ -1,6 +1,7 @@
 .sidebar {
   flex-direction: column;
-  width: 25vh;
+  width: 250px;
+  min-width: 250px;
   height: 100vh;
   position: -webkit-sticky;
   position: sticky;
