--- a/telematicsWebsite/templates/base.html
+++ b/telematicsWebsite/templates/base.html
@@ -16,12 +16,16 @@
 
     <link href="{% static 'css/sidebar.css' %}" rel="stylesheet" />
     <link href="{% static '/libs/bootstrap/dist/css/bootstrap.css' %}" rel="stylesheet" />
+    <link href="{% static '/css/base.css' %}" rel="stylesheet" />
 
   
   </head>
   <body>
 
 {% if user.is_authenticated %}
+<div class='transition_overlay'>
+  <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+</div>
 <div class="wrapper">
   <div class="sidebar">
     <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark stickey" style="flex: 1">
@@ -78,7 +82,11 @@
 
 {% endif %}
 
-
+<script>
+  $(document).ready(function(){
+     $(window).scrollTop(0);
+ });
+ </script>
   </body>
 </html>
 
